src/test/ui/parser/issue-6610.stderr
error: expected `;` or `{`, found `}`
  --> $DIR/issue-6610.rs:1:20
   |
LL | trait Foo { fn a() }
   |           -        ^
   |           |        |
   |           |        expected `;` or `{`
   |           |        the item list ends here
   |           while parsing this item list starting here

error: aborting due to previous error

